discussion/kv_engine/179372/179372_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53531: Make KVBucket::ckptDestroyerTasks folly::Synchronized<T>

In preparation for making checkpoint_destruction_tasks dynamic in EP
config.

Change-Id: I80ce6bd8780034c9802c723460264d3a6bedc4e0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-08-31 13:28:22.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 13:31:14.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21837/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21837/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22189/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22189/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22929/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22929/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30218/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30218/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21130/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21130/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9579/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9579/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9678/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9678/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19883/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2992:12: error: non-const lvalue reference to type "CheckpointDestroyerTask" cannot bind to a temporary of type "std::shared_ptr<CheckpointDestroyerTask>" [clang-diagnostic-error]
    return ckptDestroyerTasks.withRLock([vbid](const auto& tasks) {
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19883/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2992:12:
error: non-const lvalue reference to type "CheckpointDestroyerTask" cannot bind to a temporary of type "std::shared_ptr<CheckpointDestroyerTask>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19883/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19104/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
